--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.0-221.0.dev <3.0.0"
+  sdk: ">=2.18.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,11 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_modular: ^5.0.3
   flutter_triple: ^1.2.8-dev.1
-  modular_test: ^2.0.0
   carousel_slider: ^4.1.1
   flutter_easyloading: ^3.0.5
   http: ^0.13.5
   infinite_scroll_pagination: ^4.0.0-dev.1
+  rx: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +54,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   triple_test: ^1.0.0+1
+  modular_test: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
